add task -> fix php-fpm listen.owner

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,18 +1,34 @@
 ---
 # tasks file for php7
 
-    - name: ==> 1 - add PPA of php7 (community)
+    - name: ==> add PPA of php7 (community)
       apt_repository: repo="ppa:ondrej/php-7.0"
 
+    - debug: msg="add PPA of nginx (official) -- delegated to roles"
 
-    - debug: msg="==> 2 - add PPA of nginx (official) -- delegated to roles"
-
-    - name: ==> 3 - download/update the package lists
+    - name: ==> download/update the package lists
       apt: update_cache=yes
 
-
-    - name: ==> 4 - install php-fpm, and php-mysql
+    - name: ==> install php-fpm, and php-mysql (php7.0)
       apt: name={{ item }} state=present
       with_items:
         - php7.0-fpm
         - php7.0-mysql
+
+    - debug: msg="==> change php-fpm unix socket permission to the same as nginx"
+
+    - name: fix listen.owner for php-fpm
+      lineinfile:
+        dest: /etc/php/7.0/fpm/pool.d/www.conf
+        regexp: '^listen.owner\s*=.*$'
+        line: "listen.owner=nginx"
+        state: present
+      notify: restart php-fpm
+
+    - name: fix listen.group for php-fpm
+      lineinfile:
+        dest: /etc/php/7.0/fpm/pool.d/www.conf
+        regexp: '^listen.group\s*=.*$'
+        line: "listen.group=nginx"
+        state: present
+      notify: restart php-fpm
